<resources>
    <string name="app_name" translatable="false">GreenGenie</string>
    <string name="txt_tab1">My Genie</string>
    <string name="txt_tab2">My Data</string>
    <string name="txt_tab3">Form</string>
    <string name="lamp">My Genie</string>
    <string name="user">Profile</string>
    <string name="data">Data</string>
    <string name="form">Form</string>
    <string name="save">Save</string>
    <string name="password">password</string>
    <string name="forgotPassword">We will send you an email to this adress</string>
    <string name="water_sentc">Introduce the amount of your last water bill</string>
    <string name="water_sentc2">Introduce the price of your last water bill</string>
    <string name="light_sentc">Introduce the amount of your last light bill</string>
    <string name="light_sentc2">Introduce the price of your last light bill</string>
    <string name="gas_sentc">Introduce the amount of your last gas bill</string>
    <string name="gas_sentc2">Introduce the price of your last gas bill</string>
    <string name="petrol_sentc">Introduce the amount of your last petrol bill</string>
    <string name="petrol_sentc2">Introduce the price of your last petrol bill</string>
    <string name="people_sentc">How many people lives in your house?</string>
    <string name="house_sentc">Introduce the surface of your house</string>
    <string name="btnDone">Done</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnFix">Fix Objective</string>
    <string name="btnDelete">Delete</string>
    <string name="btnEdit">Edit</string>
    <string name="btnNewForm">New Form</string>
    <string name="spinnerBill">Select month</string>
    <string name="LogOut">Log Out</string>
    <string name="editProfile">Edit Profile</string>
    <string name="nameProfile">Profile Name</string>
    <string name="emailProfile">Profile email</string>
    <string name="spinner">Vehicle Type</string>
    <string name="text_policy" translatable="false">POLÍTICA DE PRIVACIDAD \n\n

    El presente Política de Privacidad establece los términos en que GreenGenie usa y protege la información que es proporcionada por sus usuarios al momento de utilizar su sitio web. Esta compañía está comprometida con la seguridad de los datos de sus usuarios. Cuando le pedimos llenar los campos de información personal con la cual usted pueda ser identificado, lo hacemos asegurando que sólo se empleará de acuerdo con los términos de este documento. Sin embargo esta Política de Privacidad puede cambiar con el tiempo o ser actualizada por lo que le recomendamos y enfatizamos revisar continuamente esta página para asegurarse que está de acuerdo con dichos cambios.\n\n

    Información que es recogida \n\n

    Nuestro sitio web podrá recoger información personal por ejemplo: Nombre,  información de contacto como  su dirección de correo electrónica e información demográfica. Así mismo cuando sea necesario podrá ser requerida información específica para procesar algún pedido o realizar una entrega o facturación.\n\n

    Uso de la información recogida \n\n

    Nuestro sitio web emplea la información con el fin de proporcionar el mejor servicio posible, particularmente para mantener un registro de usuarios, de pedidos en caso que aplique, y mejorar nuestros productos y servicios.  Es posible que sean enviados correos electrónicos periódicamente a través de nuestro sitio con ofertas especiales, nuevos productos y otra información publicitaria que consideremos relevante para usted o que pueda brindarle algún beneficio, estos correos electrónicos serán enviados a la dirección que usted proporcione y podrán ser cancelados en cualquier momento. \n\n

    GreenGenie está altamente comprometido para cumplir con el compromiso de mantener su información segura. Usamos los sistemas más avanzados y los actualizamos constantemente para asegurarnos que no exista ningún acceso no autorizado. \n\n

    Cookies \n\n

    Una cookie se refiere a un fichero que es enviado con la finalidad de solicitar permiso para almacenarse en su ordenador, al aceptar dicho fichero se crea y la cookie sirve entonces para tener información respecto al tráfico web, y también facilita las futuras visitas a una web recurrente. Otra función que tienen las cookies es que con ellas las web pueden reconocerte individualmente y por tanto brindarte el mejor servicio personalizado de su web. \n\n

    Nuestro sitio web emplea las cookies para poder identificar las páginas que son visitadas y su frecuencia. Esta información es empleada únicamente para análisis estadístico y después la información se elimina de forma permanente. Usted puede eliminar las cookies en cualquier momento desde su ordenador. Sin embargo las cookies ayudan a proporcionar un mejor servicio de los sitios web, estás no dan acceso a información de su ordenador ni de usted, a menos de que usted así lo quiera y la proporcione directamente noticias. Usted puede aceptar o negar el uso de cookies, sin embargo la mayoría de navegadores aceptan cookies automáticamente pues sirve para tener un mejor servicio web. También usted puede cambiar la configuración de su ordenador para declinar las cookies. Si se declinan es posible que no pueda utilizar algunos de nuestros servicios. \n\n

    Enlaces a Terceros \n\n

    Este sitio web pudiera contener enlaces a otros sitios que pudieran ser de su interés. Una vez que usted de clic en estos enlaces y abandone nuestra página, ya no tenemos control sobre al sitio al que es redirigido y por lo tanto no somos responsables de los términos o privacidad ni de la protección de sus datos en esos otros sitios terceros. Dichos sitios están sujetos a sus propias políticas de privacidad por lo cual es recomendable que los consulte para confirmar que usted está de acuerdo con estas. \n\n

    Control de su información personal \n\n

    En cualquier momento usted puede restringir la recopilación o el uso de la información personal que es proporcionada a nuestro sitio web.  Cada vez que se le solicite rellenar un formulario, como el de alta de usuario, puede marcar o desmarcar la opción de recibir información por correo electrónico.  En caso de que haya marcado la opción de recibir nuestro boletín o publicidad usted puede cancelarla en cualquier momento. \n\n

    Esta compañía no venderá, cederá ni distribuirá la información personal que es recopilada sin su consentimiento, salvo que sea requerido por un juez con una orden judicial. \n\n

    GreenGenie Se reserva el derecho de cambiar los términos de la presente Política de Privacidad en cualquier momento. \n\n

    Esta politica de privacidad se han generado en politicadeprivacidadplantilla.com.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="genie_tips">HI!!! I´m GreenGenie!! \n\n
        I´m going to be your assistant to help you saving money, and... being ecofriendly!!</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="createform">Form created</string>
    <string name="formerror">Error creating form</string>
</resources>