<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PolicyActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/linerightEnd"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/btn_newForm">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spinnerBill" />

            <Spinner
                android:id="@+id/spinnerForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="50px"
                android:background="@color/transparent"
                android:entries="@array/bills" />
        </LinearLayout>

    <Button
            android:id="@+id/btn_newForm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/btnNewForm"
            app:layout_constraintEnd_toEndOf="@id/linerightEnd"
            app:layout_constraintStart_toStartOf="@id/lineleftStart"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/txt_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="FORM"
            android:textColor="@color/verde"
            android:textSize="20dp"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/water" />

        <TextView
            android:id="@+id/water_sentence"
            style="@style/setence"
            android:layout_marginTop="20dp"

            android:gravity="center"
            android:text="@string/water_sentc"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/txt_form"
            app:srcCompat="@drawable/water" />
        <ImageView
            android:id="@+id/water"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@id/water_sentence"
            app:srcCompat="@drawable/water" />

        <EditText
            android:id="@+id/water_billData"
style="@style/esditext"
            android:gravity="center"
            android:hint="m³"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/water_sentence"
            app:srcCompat="@drawable/water" />

        <TextView
            android:id="@+id/water_sentence2"
            style="@style/setence"
            android:gravity="center"
            android:text="@string/water_sentc2"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/water_billData" />

        <EditText
            android:id="@+id/water_data2"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="€"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/water_sentence2" />


        <!--***************************LIGHT****************************************-->
        <ImageView
            android:id="@+id/light"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@id/light_sentence"
            app:srcCompat="@drawable/light" />

        <TextView
            android:id="@+id/light_sentence"
            style="@style/setence"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/light_sentc"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/water_data2"
            app:srcCompat="@drawable/water" />

        <EditText
            android:id="@+id/light_billData"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="kWh"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/light_sentence"
            app:srcCompat="@drawable/water" />

        <TextView
            android:id="@+id/light_sentence2"
            style="@style/setence"
            android:gravity="center"
            android:text="@string/light_sentc2"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/light_billData" />

        <EditText
            android:id="@+id/light_data2"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint=" €"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/light_sentence2" />

        <!--********************************GAS**************************************-->
        <ImageView
            android:id="@+id/gas"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@id/gas_sentence"
            app:srcCompat="@drawable/gas" />

        <TextView
            android:id="@+id/gas_sentence"
           style="@style/setence"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/light_sentc"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/light_data2"
            app:srcCompat="@drawable/gas" />

        <EditText
            android:id="@+id/gas_billData"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="kWh"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/gas_sentence"
            app:srcCompat="@drawable/water" />

        <TextView
            android:id="@+id/gas_sentence2"
           style="@style/setence"
            android:gravity="center"
            android:text="@string/gas_sentc2"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/gas_billData" />

        <EditText
            android:id="@+id/gas_data2"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="€"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/gas_sentence2" />


        <!--****************************PETROL************************************-->
        <ImageView
            android:id="@+id/petrol"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@id/petrol_sentence"
            app:srcCompat="@drawable/fuel" />

        <TextView
            android:id="@+id/petrol_sentence"
            style="@style/setence"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/petrol_sentc"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/gas_data2" />

        <EditText
            android:id="@+id/petrol_billData"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="L"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/petrol_sentence" />

        <TextView
            android:id="@+id/petrol_sentence2"
style="@style/setence"
            android:gravity="center"
            android:text="@string/gas_sentc2"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/petrol_billData" />

        <EditText
            android:id="@+id/petrol_data2"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="€"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/petrol_sentence2" />
        <!--****************************PEOPLE****************************************-->
        <ImageView
            android:id="@+id/family"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@id/family_sentence"
            app:srcCompat="@drawable/family" />

        <TextView
            android:id="@+id/family_sentence"
            style="@style/setence"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/people_sentc"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/petrol_data2" />

        <EditText
            android:id="@+id/house_billData"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:inputType="number"
            android:hint="number of people"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/family_sentence" />

        <!--******************************HOUSE**********************************-->
        <ImageView
            android:id="@+id/home"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="@+id/line_left"
            app:layout_constraintTop_toBottomOf="@id/home_sentence"
            app:srcCompat="@drawable/home" />

        <TextView
            android:id="@+id/home_sentence"
            style="@style/setence"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/house_sentc"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@+id/house_billData" />

        <EditText
            android:id="@+id/home_billData"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:background="@color/azul_claro_tr"
            android:gravity="center"
            android:hint="m²"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/home_sentence" />


        <!-- *************************BUTTONS*************************-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/linercenteright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.52" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/linercenterleft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.48" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/linerightEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.86" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineleftStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.14" />



        <Button
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/btnEdit"
            app:layout_constraintEnd_toEndOf="@id/linerightEnd"
            app:layout_constraintStart_toStartOf="@id/lineleftStart"
            app:layout_constraintTop_toBottomOf="@id/home_billData"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="943dp" />


        <Button
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/btnDone"
            app:layout_constraintEnd_toEndOf="@id/linerightEnd"
            app:layout_constraintStart_toStartOf="@id/lineleftStart"
            app:layout_constraintTop_toBottomOf="@id/btn_edit"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="943dp"
          />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/btnCancel"
            app:layout_constraintEnd_toEndOf="@id/linerightEnd"
            app:layout_constraintStart_toStartOf="@id/lineleftStart"
            app:layout_constraintTop_toBottomOf="@id/btn_done"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="943dp"
            />

        <TextView
            android:id="@+id/texmargin"
            android:layout_width="270dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:text=""
            app:layout_constraintStart_toStartOf="@id/line_right"
            app:layout_constraintTop_toBottomOf="@id/btn_cancel"
           />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
